<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/weather_background"
    tools:context=".WeatherActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:inputType="text"
            android:id="@+id/cityET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/widget_border"
            android:textColor="@color/black"
            android:hint="@string/input_city"
            android:textAlignment="center" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getDataByCityBTN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/button_border"
            android:text="@string/get_data_text"
            android:textSize="15sp"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getCurrentDataBTN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/button_border"
            android:text="@string/by_current_location"
            android:textSize="15sp"
            />


        <TextView
            android:id="@+id/cityTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_text"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/temperatureTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_c"
            android:textStyle="bold"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="20sp"

            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <ImageView
            android:id="@+id/imageIV"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/baseline_sunny_24" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/windDirectionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direction_wind"
                android:background="@drawable/widget_background"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/windSpeedTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/speed_wind"
                android:textStyle="italic"
                android:background="@drawable/widget_background"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_margin="8dp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/atmosphericPressureTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pressure_text"
            android:textStyle="italic"
            android:background="@drawable/widget_background"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/humidityTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/humidity_text"
            android:textStyle="italic"
            android:background="@drawable/widget_background"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_margin="8dp"
            />
        </TableRow>

    </LinearLayout>



</LinearLayout>